mychart/templates/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      template: deployment-app
    name: app
  spec:
    ports:
    - name: web
      port: 8080
      targetPort: 8080
    selector:
      name: app
kind: List
metadata:
#  name: deployment-app
