mychart/templates/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      template: deployment-app
    name: app
  spec:
    #host: “deployment-app.3.81.146.233.xip.io”
    host: ""
    to:
      kind: Service
      name: app
kind: List
metadata:
#  name: deployment-app
